--- a/cmd/internal/switcher/templates/test_data/notenants/sonic_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/notenants/sonic_frr.conf
@@ -38,11 +38,13 @@ router bgp 4200000010
  !
  address-family ipv4 unicast
   redistribute connected route-map DENY_MGMT
+  redistribute kernel route-map DENY_MGMT
   neighbor FIREWALL allowas-in 2
  exit-address-family
  !
  address-family ipv6 unicast
   redistribute connected route-map DENY_MGMT
+  redistribute kernel route-map DENY_MGMT
   neighbor FIREWALL allowas-in 2
   # see https://docs.frrouting.org/en/latest/bgp.html#clicmd-neighbor-A.B.C.D-activate
   # why activate is required
