--- a/cmd/internal/switcher/templates/test_data/lab/sonic_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/lab/sonic_frr.conf
@@ -55,12 +55,14 @@ router bgp 4200000010
  !
  address-family ipv4 unicast
   redistribute connected route-map DENY_MGMT
+  redistribute kernel route-map DENY_MGMT
   neighbor FIREWALL allowas-in 2
   neighbor swp3 route-map fw-swp3-in in
  exit-address-family
  !
  address-family ipv6 unicast
   redistribute connected route-map DENY_MGMT
+  redistribute kernel route-map DENY_MGMT
   neighbor FIREWALL allowas-in 2
   # see https://docs.frrouting.org/en/latest/bgp.html#clicmd-neighbor-A.B.C.D-activate
   # why activate is required
@@ -117,6 +119,12 @@ router bgp 4200000010 vrf Vrf104001
 ip prefix-list Vrf104001-in-prefixes permit 10.240.0.0/12 le 32
 route-map Vrf104001-in permit 10
  match ip address prefix-list Vrf104001-in-prefixes
+!
+route-map RM_SET_SRC permit 10
+ set src 10.0.0.10
+exit
+!
+ip protocol bgp route-map RM_SET_SRC
 !
 line vty
 !
