--- a/cmd/internal/switcher/templates/test_data/notenants/sonic_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/notenants/sonic_frr.conf
@@ -38,11 +38,13 @@ router bgp 4200000010
  !
  address-family ipv4 unicast
   redistribute connected route-map DENY_MGMT
+  redistribute kernel route-map DENY_MGMT
   neighbor FIREWALL allowas-in 2
  exit-address-family
  !
  address-family ipv6 unicast
   redistribute connected route-map DENY_MGMT
+  redistribute kernel route-map DENY_MGMT
   neighbor FIREWALL allowas-in 2
   # see https://docs.frrouting.org/en/latest/bgp.html#clicmd-neighbor-A.B.C.D-activate
   # why activate is required
@@ -62,6 +64,12 @@ route-map DENY_MGMT deny 10
 route-map DENY_MGMT permit 20
 !
 ip route 0.0.0.0/0 192.168.0.254 nexthop-vrf mgmt
+!
+route-map RM_SET_SRC permit 10
+ set src 10.0.0.10
+exit
+!
+ip protocol bgp route-map RM_SET_SRC
 !
 line vty
 !
